--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -1,6 +1,6 @@
 .box-layout {
   align-items: center;
-  background: url('/images/bg.jpg');
+  background: url('/images/background.jpg');
   background-size: cover;
   display: flex;
   height: 100vh;
@@ -13,7 +13,7 @@
   border-radius: 3px;
   padding: $l-size $m-size;
   text-align: center;
-  width: 25rem;
+  width: 40rem;
 }
 
 .box-layout__title {
