--- a/src/styles/components/_chat.scss
+++ b/src/styles/components/_chat.scss
@@ -1,7 +1,7 @@
 .top-bar {
   height: 30px;
   background: #364051;
-  margin: auto;
+  margin: 20px auto 0;
   box-shadow: 1px 1px 1px 1px black;
   border: 1px solid white;
   border-radius: 5px;
@@ -46,8 +46,7 @@
 .chat-input-box {
   width: 100%;
   display: flex;
-  margin: 0 auto;
-  margin-top: 20px;
+  margin: 5px auto;
 }
 
 .chat-input-box input {
